load("//:build/wd_cc_library.bzl", "wd_cc_library")
load("//:build/wd_rust_crate.bzl", "wd_rust_crate")

wd_rust_crate(
    name = "nbytes",
    cxx_bridge_src = "lib.rs",
    visibility = ["//visibility:public"],
    deps = [":ffi"],
)

wd_cc_library(
    name = "ffi",
    srcs = ["ffi.c++"],
    hdrs = ["ffi.h"],
    deps = [
        ":lib.rs@cxx",
        "@nbytes",
    ],
)
