load("//:build/wd_rust_crate.bzl", "wd_rust_crate")

wd_rust_crate(
    name = "node-exceptions",
    cxx_bridge_deps = [
        "//src/rust/jsg",
        "//src/workerd/api/node:exception-type",
    ],
    cxx_bridge_srcs = ["lib.rs"],
    test_deps = ["//src/rust/jsg-test"],
    visibility = ["//visibility:public"],
    deps = [
        "//src/rust/jsg",
        "@crates_vendor//:nix",
    ],
)
